# pwnsat_sensor_lib

./: CMakeLists.txt  README.md
lib/bme280/: CMakeLists.txt
lib/bme280/include/: bme280.h
lib/bme280/src/: bme280.c
lib/i2c_tools/: CMakeLists.txt
lib/i2c_tools/include/: i2c_tools.h
lib/i2c_tools/src/: i2c_tools.c
lib/mpu6050/: CMakeLists.txt
lib/mpu6050/include/: mpu6050.h
lib/mpu6050/src/: mpu6050.c
src/: main.c
